add newline to html page

--- a/util/logtools/splitter.html
+++ b/util/logtools/splitter.html
@@ -16,7 +16,8 @@
   </label>
 </div>
 <div id="export-buttons" class="hide">
-  <button class="button-label" id="exportSelected" disabled></button><button class="button-label" id="exportAll" disabled></button>
+  <button class="button-label" id="exportSelected" disabled></button>
+  <button class="button-label" id="exportAll" disabled></button>
 </div>
 <div id="errors"></div>
 <div id="fight-table"></div>
